Report: fact-check pass — 9 claims verified, several corrected
#1 spark-connect-go: verified gRPC client, not a Scala AOT target.
   Tightened framing from "sidesteps the JVM rather than AOT-compiling
   Scala" to a more neutral observation (the ecosystem has a Go
   client but no native-image Scala client).

#2 AgnosticEncoder variant count: I said ~30. Real count from
   Spark 4.1.2 source is 47 (10 structural + 14 primitive/boxed +
   22 other leaves + 1 transforming). Updated.

#3 scala.reflect.runtime.universe init time: I claimed ~50-100 ms.
   MEASURED DIRECTLY via a 2-line Scala 2.13 program — universe
   access takes ~500-535 ms (5 runs, ~5% variance) vs ~60 ms
   baseline empty-main. Off by 5-10×. Corrected to ~500 ms in
   both §5 and §13 with the measurement method explicit.

#4 Frameless "identical performance" claim: quoted from the Frameless
   docs verbatim (it should be noted that once derived, reflection-
   based Encoders and implicitly derived TypeEncoders have identical
   performance). Added link to the source page.

#5 "Akka has Scala 3": technically correct (Akka 25.10 cross-built
   for Scala 3.3) but the post-2022 BUSL license change makes Pekko
   (ASF fork of Akka 2.6) the relevant comparison for open-source
   Spark. Updated to "Akka/Pekko" with the license context.

#6 GraalVM cold start "~300ms → single-digit ms": real Spring Boot
   3.2 numbers are 1.42s → 407ms (71% reduction). Single-digit-ms
   is only true for trivial programs. Updated to cite the actual
   Spring Boot benchmark + softened "single-digit-ms" to
   "sub-second" in the Spark Connect client scenario.

#7 jsoniter-scala "~1.5-2× faster than Jackson": I couldn't pin a
   specific number to an authoritative source. Softened to
   "consistently outperform jackson-module-scala across published
   benchmarks; margins vary by payload shape" with a link to
   plokhotnyuk's official benchmark site.

#8 §8 LOC counts: I said ~12/~150/~300; real counts are 8/236/474.
   Updated 